# dronecontrol

./: Cargo.toml  README.md  linearisation.md  rotor_torque.md
src/: control.rs  main.rs  physics.rs  simulation.rs
src/control/: angular_velocity_controller.rs
src/physics/: force.rs  integrator.rs  rigidbody.rs
src/simulation/: drone.rs  integrator.rs
