[package]
name = "dronecontrol"
version = "0.1.0"
authors = ["Aart Stuurman <aartstuurman@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.25.3"
plotters = "0.3"
arrayvec = "0.7.0"
itertools = "0.10.0"